--- a/src/app/modules/investimentos/views/edit/investimento-edit.component.html
+++ b/src/app/modules/investimentos/views/edit/investimento-edit.component.html
@@ -1,78 +1,95 @@
 <div class="row">
-
     <div class="col-sm-12">
         <div class="card-header  bg-dark text-white">
             <h3>Investimentos</h3>
         </div>
     </div>
-    <div class="col-sm-12">
-        <div class="row">
+    <div class="row container">
+        <div class="col-sm-12">
             <div class="col-sm-12">
-                <h4 class="title-label" >DADOS DO INVESTIMENTO</h4>
+                <h4 class="title-label">DADOS DO INVESTIMENTO</h4>
             </div>
-            <div class="col-sm-12">
-                <div class="d-print-inline-flex">
-                    <table class="table table table-borderless table-condensed table-hover table-custom">
-                        <thead>
-                            <tr>
-                                <th scope="col">NOME</th>
-                                <th scope="col">OBJETIVO</th>
-                                <th scope="col">SALDO TOTAL DISPONÍVEL</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                            </tr>
-                          
-                        </tbody>
-                    </table>
+            <div class="row row-custom">
+
+                <div class="col-sm-4">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            Nome
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            {{model.nome}}
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            Saldo total disponível
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            {{(model.saldoTotalDisponivel || '0') | format: 'currencybr' }}
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            Valor total a resgatar
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            {{(model.valorTotalResgatar || '0') | format: 'currencybr'}}
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="col-sm-12">
-        <div class="row">
-            <div class="col-sm-12">
-                <h4 class="title-label">RESGATE DO SEU JEITO</h4>
-            </div>
-            <div class="col-sm-12">
-                <div class="d-print-inline-flex">
-                  <!--   <form role="form" [formGroup]="form"> -->
-                    <table class="table table table-hover table-custom">
-                        <thead>
-                            <tr>
-                                <th scope="col">AÇÃO</th>
-                                <th scope="col">SALDO ACUMULADO</th>
-                                <th scope="col">VALOR A RESGATAR</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>
-                                    <div class="input-group mb-3">
-                                        <input formControlName="item" type="text" class="form-control" aria-label="Default"
-                                            aria-describedby="inputGroup-sizing-default">
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Larry</td>
-                                <td>the Bird</td>
-                                <td>
-                                    <div class="input-group mb-3">
-                                     <!--    <input type="text" class="form-control" aria-label="Default"
+        <div class="col-sm-12">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h4 class="title-label">RESGATE DO SEU JEITO</h4>
+                </div>
+                <div class="col-sm-12">
+                    <div class="d-print-inline-flex">
+                        <!--   <form role="form" [formGroup]="form"> -->
+                        <table class="table table table-hover table-custom">
+                            <thead>
+                                <tr>
+                                    <th scope="col">AÇÃO</th>
+                                    <th scope="col">SALDO ACUMULADO</th>
+                                    <th scope="col">VALOR A RESGATAR</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Jacob</td>
+                                    <td>Thornton</td>
+                                    <td>
+                                        <div class="input-group mb-3">
+                                            <input formControlName="item" type="text" class="form-control"
+                                                aria-label="Default" aria-describedby="inputGroup-sizing-default">
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Larry</td>
+                                    <td>the Bird</td>
+                                    <td>
+                                        <div class="input-group mb-3">
+                                            <!--    <input type="text" class="form-control" aria-label="Default"
                                             aria-describedby="inputGroup-sizing-default"> -->
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                   <!--  </form> -->
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <!--  </form> -->
+                    </div>
                 </div>
             </div>
         </div>
