--- a/src/app/modules/investimentos/views/list/investimentos-list.component.html
+++ b/src/app/modules/investimentos/views/list/investimentos-list.component.html
@@ -4,26 +4,28 @@
             <h3>Investimentos</h3>
         </div>
     </div>
-    <div class="col-sm-12">
-        <div class="d-print-inline-flex">
-            <table class="table table table-hover table-custom">
-                <thead>
-                    <tr>
-                        <th scope="col">NOME</th>
-                        <th scope="col">OBJETIVO</th>
-                        <th scope="col">SALDO TOTAL DISPONÍVEL</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let item of investlist">
+    <div class="row container">
+        <div class="col-sm-12">
+            <div class="d-print-inline-flex">
+                <table class="table table table-hover table-custom">
+                    <thead>
+                        <tr>
+                            <th scope="col">NOME</th>
+                            <th scope="col">OBJETIVO</th>
+                            <th scope="col">SALDO TOTAL DISPONÍVEL</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let item of investlist">
 
-                        <td (click)="edit(item)">{{item.nome}}</td>
-                        <td>{{item.objetivo}}</td>
-                        <td>{{item.saldoTotalDisponivel}}</td>
+                            <td (click)="edit(item)">{{item.nome}}</td>
+                            <td>{{item.objetivo}}</td>
+                            <td>{{(item.saldoTotalDisponivel || '0') | format: 'currencybr' }}</td>
 
-                    </tr>
-                </tbody>
-            </table>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
