--- a/src/app/modules/investimentos/views/edit/investimento-edit.component.scss
+++ b/src/app/modules/investimentos/views/edit/investimento-edit.component.scss
@@ -12,7 +12,7 @@
     border-radius: 0.4rem;
     border: solid 1px #8e999f;
     padding: 20px 20px 20px 0;
-    margin: 0;
+    margin: 20px;
     display:flex;
     flex-direction: row;
 }
