--- a/src/app/modules/investimentos/views/edit/investimento-edit.component.html
+++ b/src/app/modules/investimentos/views/edit/investimento-edit.component.html
@@ -1,10 +1,10 @@
-<section class="row">
+<section class="container">
     <div class="col-sm-12">
         <div class="card-header  bg-dark text-white">
             <h3>Investimentos</h3>
         </div>
     </div>
-    <div class="row container">
+    <div class="row ">
         <div class="col-sm-12">
             <div class="col-sm-12">
                 <h4 class="title-label">DADOS DO INVESTIMENTO</h4>
@@ -42,7 +42,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            {{(model.valorTotalResgatar || '0') | format: 'currencybr'}}
+                            {{(totalResgateInfo || '0') | format: 'currencybr'}}
                         </div>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="col-sm-12">
                     <form role="form" [formGroup]="form">
-                        <div class="row" *ngFor="let item of model.acoes; let i = index;">
+                        <div class="row p-2" *ngFor="let item of model.acoes; let i = index;">
                             <div class="col-sm-4">
                                 <div class="row">
                                     <div class="col-sm-12">
@@ -98,17 +98,22 @@
                             <div class="col-sm-4">
                                 <div class="row">
                                     <div class="col-sm-12">
-                                        <input name="inputName" class="form-control" placeholder="" type="text"
-                                        [ngClass]="formCustom.displayFieldCss(i, form)" 
-                                            formControlName="a{{i}}">
+                                        <input currencyMask name="inputName" class="form-control" placeholder=""
+                                            type="text" [ngClass]="formCustom.displayFieldCss(item.formInputName, form)"
+                                            (keyup)="onHandleKeyup(item,$event.target.value,item.formInputName)"
+                                            formControlName="{{item.formInputName}}" data-toggle="tooltip"
+                                            data-placement="right"
+                                            title="Informe o valor que deseja resgatar ou informe 0">
+                                        <span class="error-input"
+                                            [hidden]="!formCustom.isFieldValid(item.formInputName, form)">Campo
+                                            obrigatório.</span>
+
                                     </div>
                                 </div>
                             </div>
                         </div>
-
                     </form>
                 </div>
-               
             </div>
             <div class="col-sm-12">
                 <button type="button" class="btn btn-primary float-right" (click)="onSubmit()">Confirmar
