--- a/src/app/modules/investimentos/views/list/investimentos-list.component.html
+++ b/src/app/modules/investimentos/views/list/investimentos-list.component.html
@@ -1,31 +1,23 @@
-<div class="row">
-    <div class="col-sm-12">
-        <div class="card-header  bg-dark text-white">
-            <h3>Investimentos</h3>
-        </div>
+<div class="container">
+    <div class=" p-12 card-header  bg-dark text-white">
+        <h3>Investimentos</h3>
     </div>
-    <div class="row container">
-        <div class="col-sm-12">
-            <div class="d-print-inline-flex">
-                <table class="table table table-hover table-custom">
-                    <thead>
-                        <tr>
-                            <th scope="col">NOME</th>
-                            <th scope="col">OBJETIVO</th>
-                            <th scope="col">SALDO TOTAL DISPONÍVEL</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let item of investlist">
-
-                            <td (click)="edit(item)">{{item.nome}}</td>
-                            <td>{{item.objetivo}}</td>
-                            <td>{{(item.saldoTotalDisponivel || '0') | format: 'currencybr' }}</td>
-
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+    <div class="d-flex justify-content-center">
+        <table class="table table table-hover table-custom">
+            <thead>
+                <tr>
+                    <th scope="col">NOME</th>
+                    <th scope="col">OBJETIVO</th>
+                    <th scope="col">SALDO TOTAL DISPONÍVEL</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of investlist">
+                    <td (click)="edit(item)">{{item.nome}}</td>
+                    <td>{{item.objetivo}}</td>
+                    <td>{{(item.saldoTotalDisponivel || '0') | format: 'currencybr' }}</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
